<resources>
    <string name="app_name">AmtrakTrainApp</string>
    <string name="btnArrival">Arrival Time</string>
    <string name="hint1">Boarding Time in Hours</string>
    <string name="hint2">Boarding Time in Minutes</string>
    <string name="hint3">Length of the Trip in Minutes</string>
    <string name="imgOpeningDesc">App Opening Image</string>
    <string name="imgTrainDesc">Train Image</string>
    <string name="txtTitle">Amtrak Train</string>

</resources>
