<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtTitle1TopMargin"
        android:gravity="center"
        android:text="@string/txtTitle"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtTitleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBoardHrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtBoardingTimeHoursTopMargin"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="numberDecimal"
        android:textSize="@dimen/txtBoardingTimeHours" />

    <EditText
        android:id="@+id/txtBoardMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtBoardingTimeMinutesTopMargin"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="numberDecimal"
        android:textSize="@dimen/txtBoardingTimeMinutes" />

    <EditText
        android:id="@+id/txtTripLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtLengthOfTripTopMargin"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="numberDecimal"
        android:textSize="@dimen/txtLengthOfTrip" />

    <Button
        android:id="@+id/btnArrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btnArrivalTopMargin"
        android:text="@string/btnArrival"
        android:textSize="@dimen/btnArrivalTime" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/imgOpeningTopMargin"
        android:contentDescription="@string/imgOpeningDesc"
        app:srcCompat="@drawable/amtraklogo" />

</LinearLayout>